1999-02-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add common.el and protocol.el.

	* common.el: New files, moved from swarmdocs.

	* protocol.el: New file, input-code from swarmdocs protocol.el.

1999-02-15  Alex Lancaster  <alex@santafe.edu>

	* Makefile.lib.in (SWARMINCLUDES): Replaces INCLUDES.

1999-02-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (HDF5LDFLAGS): Substitute.

1999-01-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.rules: New file.

	* Makefile.tests.in: Compute INCLUDES and SWARMBUILDLDFLAGS from
	SWARMMODULES.  Set LDFLAGS to SWARMBUILDLDFLAGS and SUPPORTFLAGS.
	Set LIBS to SWARMLIBS, SYSLIBS and @LIBS@. 
	Delete everything else. 
	(SWARMBUILDLDFLAGS): Add -rpath for each -L.

	* Makefile.lib.in: Include Makefile.rules.

	* Makefile.common.in (SWARMINCLUDES): Renamed from INCLUDES.
	(SUPPORTLDFLAGS): Remove SWARMLDFLAGS / renamed from LDFLAGS.
	(SWARMMODULES): List of Swarm modules.
	(SWARMLIBS): Compute from that.
	Remove .m -> .o rule; move it to Makefile.rules.

	* Makefile.appl.in: Include Makefile.rules.
	(LIBS): Substitute here.
	($(APPEXE)): Set LDFLAGS to SWARMLDFLAGS + SUPPORTLDFLAGS.

	* Makefile.am (EXTRA_DIST): Add Makefile.rules.
	(install-data-local): Install it.

1999-01-19  Alex Lancaster  <alex@santafe.edu>

	* Makefile.common.in (OBJC, OBJCFLAGS): Extract variables.

1999-01-13  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Makefile.tests.in (INCLUDES): Change paths due to new location
	of tests directory.
	(SWARMBUILDLDFLAGS): Use .libs subdirectory to link against 
	libraries in build area.
	(SWARMLDFLAGS): Remove. 

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.tests.in (INCLUDES): Use ../.. instead of
	-I$(top_builddir)/src.  Remove -I$(includedir). 
	(builddir): Use $(shell cd ../..; pwd) instead of $(shell pwd)/...

1999-01-13  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add Makefile.test.in.