@@ -1,3 +1,9 @@
+1999-02-16  Vladimir Jojic  <vjojic@chama.santafe.edu>
+
+	* Makefile.am (EXTRA_DIST): Add java-stub.el.
+
+	* java-stub.el: New file.
+
 1999-02-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (EXTRA_DIST): Add common.el and protocol.el.
